--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-streamlit
+streamlit>=1.37.0
 requests
 pandas
 datetime
 oauthlib
 requests-oauthlib
+Authlib>=1.3.2
+
+
 
 # The following are not required, as these are std python libraries, and therefore already available
 #pathlib
