--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit>=1.47.0
+streamlit
 requests
 pandas
 datetime
 oauthlib
-requests-oauthlib
-Authlib>=1.3.2
+# requests-oauthlib
+Authlib
 
 
 
