--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
+streamlit>=1.42.0
 requests
 pandas
 datetime
-oauthlib
+# oauthlib
 # requests-oauthlib
-Authlib
+Authlib>=1.3.2
 
 
 
