--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ datetime
 # requests-oauthlib
 Authlib>=1.3.2
 matplotlib
-
+pyrolite
 
 
 # The following are not required, as these are std python libraries, and therefore already available
